--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,17 @@
 @import "tailwindcss";
 
+@theme {
+    /* Screens */
+  --breakpoint-xxs: 0px;
+  --breakpoint-xs: 360px;
+  --breakpoint-sm: 480px;
+  --breakpoint-msm: 540px;
+  --breakpoint-lsm: 640px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 1024px;
+  --breakpoint-xl: 1280px;
+}
+
 @layer utilities {
     button {
         @apply cursor-pointer;
